--- a/.classpath
+++ b/.classpath
@@ -24,6 +24,9 @@
 	<classpathentry kind="lib" path="lib/cobra/js.jar"/>
 	<classpathentry kind="lib" path="lib/apache/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/jep/jep-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/spring/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/spring/spring-beans-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="lib/spring/spring-core-2.5.6.SEC01.jar"/>
 	<classpathentry kind="lib" path="lib/fop/avalon-framework-cvs-20020806.jar"/>
 	<classpathentry kind="lib" path="lib/fop/batik.jar"/>
 	<classpathentry kind="lib" path="lib/fop/fop.jar"/>
