FReq: CODE-7 - CLONE -Sorting Weapons
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@11514 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -2496,6 +2496,14 @@ in_igSortWeightDscLabel=By weight (descending)
 
 in_igSortWeightDscDesc=Sort equipment list by weight in descending order
 
+in_igSortEquippedAscLabel=By equipped (ascending)
+
+in_igSortEquippedAscDesc=Sort equipment list by equipped status in ascending order
+
+in_igSortEquippedDscLabel=By equipped (descending)
+
+in_igSortEquippedDscDesc=Sort equipment list by equipped status in descending order
+
 #0 - Quantity
 in_igBuyMenuCommand=Buy {0}
 
