Set encoding parameter when calling javac to make the JVM read Strings in .java files in the intended encoding (ISO-8859-1) and without warnings of the type 'warning: unmappable character for encoding UTF8' at compile time on systems with another default encoding than ISO-8859-1 (or WINDOWS-1252, which is mostly similar).
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@11555 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/build.xml
+++ b/build.xml
@@ -167,14 +167,14 @@ These files can be renamed and used for releases.
 
 	<!-- Compile the java code -->
 	<target name="compile" depends="compile-compile" description="Compile Java sources">
-		<javac srcdir="${src.java.dir}" destdir="${build.classes.dir}" deprecation="true" includes="**/*.java" debug="Yes" source="1.5" target="1.5" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
+		<javac srcdir="${src.java.dir}" destdir="${build.classes.dir}" deprecation="true" includes="**/*.java" debug="Yes" source="1.5" target="1.5" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true" encoding="ISO-8859-1">
 			<classpath refid="project.classpath" />
 		</javac>
 	</target>
 
 	<!-- Alternative compile target - compile the java code with optimzation on and debug off -->
 	<target name="compile-optimize" depends="compile-compile" description="Compile Java sources with optimisation on">
-		<javac srcdir="${src.java.dir}" destdir="${build.classes.dir}" deprecation="true" includes="**/*.java" debug="No" optimize="Yes" source="1.5" target="1.5"  memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
+		<javac srcdir="${src.java.dir}" destdir="${build.classes.dir}" deprecation="true" includes="**/*.java" debug="No" optimize="Yes" source="1.5" target="1.5"  memoryInitialSize="128m" memoryMaximumSize="512m" fork="true" encoding="ISO-8859-1">
 			<classpath refid="project.classpath" />
 		</javac>
 	</target>
@@ -926,16 +926,16 @@ pcgen.filepaths=user
 	<!-- Compile the test classes -->
 	<target name="test.compile" depends="jar, jar-all-plugins">
 		<mkdir dir="${build.testclasses.dir}" />
-		<javac srcdir="${src.testcommon.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
+		<javac srcdir="${src.testcommon.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true" encoding="ISO-8859-1">
 			<classpath refid="test.project.classpath" />
 		</javac>
-		<javac srcdir="${src.test.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
+		<javac srcdir="${src.test.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true" encoding="ISO-8859-1">
 			<classpath refid="test.project.classpath" />
 		</javac>
-		<javac srcdir="${src.utest.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
+		<javac srcdir="${src.utest.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true" encoding="ISO-8859-1">
 			<classpath refid="test.project.classpath" />
 		</javac>
-		<javac srcdir="${src.itest.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true">
+		<javac srcdir="${src.itest.java.dir}" destdir="${build.testclasses.dir}" deprecation="true" includes="**/*.java" memoryInitialSize="128m" memoryMaximumSize="512m" fork="true" encoding="ISO-8859-1">
 			<classpath refid="test.project.classpath" />
 		</javac>
 	</target>
