--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -2926,7 +2926,7 @@ in_Prefs_hideMonsterClasses=Use HD +/- instead of monster classes
 
 in_Prefs_ignoreMonsterHDCap=Ignore Monster HD Cap
 
-in_Prefs_experience=Experience
+in_Prefs_experience=Experience Table
 
 in_Prefs_xpTable=Experience table to be used
 
