Fix bug: Load Sources with PC loads incompatible and duplicate sources
Issue#: CODE-176


git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@12553 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3854,6 +3854,8 @@ Warnings.PCGenParser.IllegalAgeLine=Illegal Age line ignored: {0}
 Warnigns.PCGenParser.IllegalAlignment=Invalid alignment specification: {0}
 Warnings.PCGenParser.IllegalClassAbility=Illegal Class abilities line ignored: {0}\nError: {1}
 Warnings.PCGenParser.InvalidClassLevel=Invalid class/level specification: {0}
+Warnings.PCGenParser.InvalidSources=The source {0}\npreviously used for this character is not compatible\nwith the sources you already have loaded:\n{1}\nThe character''s sources will not be loaded.
+Warnings.PCGenParser.IncompatLoadedSources=The already loaded source: {0}\nis not compatible with the sources previously used for this character:\n{1}\nThe character''s sources will not be loaded.
 
 # 0 - tag name
 # 1 - Tag text
