Have quick tests include primitives & qualifiers
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@13156 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/build.xml
+++ b/build.xml
@@ -837,6 +837,8 @@ pcgen.filepaths=user
 				<fileset dir="${basedir}/code/src/utest">
 				  <include name="plugin/lsttokens/**/*.java"/>
 				  <include name="plugin/pretokens/**/*.java"/>
+				  <include name="plugin/primitive/**/*.java"/>
+				  <include name="plugin/qualifier/**/*.java"/>
 				  <include name="pcgen/**/*.java"/>
 				  <exclude name="**/Abstract*.java"/>
 				  <exclude name="**/testsupport/*.java"/>
