Wider range of tests in quicktest
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@13802 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/build.xml
+++ b/build.xml
@@ -835,11 +835,7 @@ pcgen.filepaths=user
 			</classpath>
 			<batchtest todir="${build.dir}/test-results/xml">
 				<fileset dir="${basedir}/code/src/utest">
-				  <include name="plugin/lsttokens/**/*.java"/>
-				  <include name="plugin/pretokens/**/*.java"/>
-				  <include name="plugin/primitive/**/*.java"/>
-				  <include name="plugin/qualifier/**/*.java"/>
-				  <include name="pcgen/**/*.java"/>
+				  <include name="**/*.java"/>
 				  <exclude name="**/Abstract*.java"/>
 				  <exclude name="**/testsupport/*.java"/>
 				</fileset>
