Implement new STATUS tag for PCC files to indicate data set development status. Issue#: CODE-386
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@13826 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -2948,6 +2948,12 @@ in_Prefs_colorAutoFeat=Automatic Feat
 
 in_Prefs_colorVirtFeat=Virtual Feat
 
+in_Prefs_colorStatusRelease=Release Status
+
+in_Prefs_colorStatusAlpha=Alpha Status
+
+in_Prefs_colorStatusBeta=Beta Status
+
 in_Prefs_colorSelect=Select color for
 
 in_Prefs_tabs=Tabs
