NEWTAG-223: Add option TESTONLY for STATUS pcc tag
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@13909 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -2954,6 +2954,8 @@ in_Prefs_colorStatusAlpha=Alpha Status
 
 in_Prefs_colorStatusBeta=Beta Status
 
+in_Prefs_colorStatusTest=Test Status
+
 in_Prefs_colorSelect=Select color for
 
 in_Prefs_tabs=Tabs
