Fix bug: Negative PREALIGN tests do not work
Issue#: CODE-485


git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14398 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -3446,6 +3446,8 @@ PreSubClass.error.badly_formed=Badly formed PRESUBCLASS attribute\u003A {0}
 
 PreType.error.invalidComparison={0} is not a valid comparison for PRETYPE. Applicable comparators are 'eq' and 'neq'\u003A {1}
 
+PreAlign.error.invalidComparison={0} is not a valid comparison for PREALIGN. Applicable comparators are 'eq' and 'neq'\u003A {1}
+
 PreStat.toHtml={0} {1} {2}
 
 PrePointBuyMethod.toHtml=Point Buy Method\u003A {0}
