Add Create Portrait button to Description page
Issue#: CODE-523


git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@14568 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/code/src/java/pcgen/gui/prop/LanguageBundle.properties
+++ b/code/src/java/pcgen/gui/prop/LanguageBundle.properties
@@ -1176,6 +1176,8 @@ in_selectPortrait=Select Portrait
 
 in_removePortrait=Remove Portrait
 
+in_buyPortrait=Buy Portrait from Affiliate
+
 in_noPortraitChildrenMessage=You may not add children to the Portrait note.
 
 in_noPortraitDeletionMessage=You may not delete the Portrait note.
@@ -2692,6 +2694,8 @@ in_refreshTipString=Click to refresh image
 in_selectPortraitTipString=Click to choose a portrait for the character
 
 in_removePortraitTipString=Click to remove the portrait from the character
+
+in_buyPortraitTipString=<html>Click to commission a portrait from RPGCharacterIllustrations.com.<br>A portion of any purchase goes to support PCGen.</html>
 
 #ToolBar Tips
 in_newCharNoSources=Please use the "Source Materials" tab to\nload sources before creating a character.
